# crossfit-timetable

./: .dockerignore  .env.example  .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  coverage.json  deny.toml  pyproject.toml  rust-toolchain.toml
.config/: nextest.toml
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/: dependabot.yml
.github/workflows/: audit-dependencies.yml  cargo-deny.yml  checks.yaml  codeql.yaml  release.yaml  sbom.yaml  test.yaml  trivy.yaml
src/: auth.rs  error.rs  handlers.rs  ical.rs  lib.rs  main.rs  models.rs  openapi.rs  scraper.rs  settings.rs  validation.rs
src/crossfit_timetable/: ical_exporter.py  main.py  scraper.py  settings.py
tests/: integration_tests.rs  test_ical_exporter.py  test_main.py  test_scraper.py  test_settings.py
