[package]
name = "crossfit-timetable"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Michał Kruczek <mikart143@gmail.com>"]
description = "Axum-based CrossFit 2.0 Rzeszów timetable API rewritten from the Python implementation"

[dependencies]
axum = { version = "0.8.8", features = ["json", "macros", "http1", "http2"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.1", features = ["json", "gzip", "brotli", "deflate"], default-features = false }
scraper = "0.25.0"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.4"
icalendar = "0.17.6"
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
once_cell = "1"
http = "1"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
dotenvy = "0.15"
futures = "0.3"
utoipa = { version = "5.4.0", features = ["chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
config = { version = "0.15.19", features = ["toml"] }
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
httpmock = "0.8.2"
serial_test = "3.0"
